--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NGNG Converter</title>
+    <meta name="description" content="NGNG Converter converts every occurance of NG in words and removes the N just for convinience!">
   </head>
   <body>
     <div id="root"></div>
